--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(optimisation_d_une_ligne_d_assemblage_projet_tdg_td7_equipe50 C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(optimisation_d_une_ligne_d_assemblage_projet_tdg_td7_equipe50
-        main.c)
+        main.c
+        lecture_contraintes.h
+        lecture_contraintes.c)
