changement place fichiers, structures operations et stations, sous programme pour compter le nombre de ligne d'un fichier, lecture des operations et stockage dans un tableau de structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_C_STANDARD 11)
 add_executable(optimisation_d_une_ligne_d_assemblage_projet_tdg_td7_equipe50
         main.c
         lecture_contraintes.h
-        lecture_contraintes.c)
+        lecture_contraintes.c
+        graphe.h
+        graphe.c)
